fix(ci):correct folder and add a deploy manual

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
-name: Deploy to GitHub Pages on Tag Push
+name: Deploy Manual
 
 on:
-  push:
-    tags:
-      - '*'
+  workflow_dispatch:  # Triggered manually
 
 jobs:
   deploy:
