--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -12,14 +12,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          ref: main # Replace with the branch name of your private repository
+          repository: KentinUltram/KU-MoPW # Replace with the username and name of your private repository
+          token: ${{ secrets.DEPLOY_TOKEN }} # Replace with your personal access token (PAT) secret
 
       - name: Copy files to a new directory
         run: |
           rsync -av --exclude 'public/' ./ ./public/
         working-directory: ${{ github.workspace }}
       
-      
-
       - name: Set up Git
         run: |
           git config user.email "fromentquentin@gmail.com"
@@ -27,7 +29,6 @@ jobs:
           git remote add public-repo https://github.com/KentinUltram/website.git
         working-directory: ${{ github.workspace }}
       
-
       - name: Push to Public Repository
         run: |
           git push public-repo HEAD:gh-pages
