fix(ci): add reference in private repo

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -31,7 +31,7 @@ jobs:
       
       - name: Push to Public Repository
         run: |
-          git push public-repo HEAD:gh-pages
+          git push --force public-repo HEAD:gh-pages
         working-directory: ${{ github.workspace }}
 
       - name: Deploy to GitHub Pages
